--- a/src/app/filters/description-filter/description-filter.component.html
+++ b/src/app/filters/description-filter/description-filter.component.html
@@ -1,10 +1,12 @@
 <div class="filter">
 	<span class="filter-desc">Desc</span>
-	<input type="text" [disabled]="!filtersEnabled || !enabled" (input)="onInput()" [(ngModel)]="selectedValue">
+	<span class="filter-text">
+		<app-textbox [text]="selectedValue" [enabled]="filtersEnabled && enabled" [size]="30" (changed)="onInput($event)"></app-textbox>
+	</span>
 	<span class="filter-btns">
 		<span class="filter-toggle">
 			<app-toggle-switch [on]="enabled" (changed)="onEnable($event)" [enabled]="filtersEnabled"></app-toggle-switch>
 		</span>
-		<button class="filter-btn" [disabled]="!filtersEnabled"><i class="fa fa-close" (click)="onClear()"></i></button>
+		<button class="filter-btn" [disabled]="!filtersEnabled" (click)="onClear()"><i class="fa fa-close"></i></button>
 	</span>
 </div>
