--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -5,11 +5,11 @@
 			<span class="filter-header-item filter-toggle">
 					<app-toggle-switch [on]="enabled" (changed)="onEnable($event)"></app-toggle-switch>
 			</span>
-			<button class="filter-header-item filter-btn"><i class="fa" [ngClass]="{'fa-angle-up': !open, 'fa-angle-down': open}" (click)="this.open = !this.open"></i></button>
-			<button class="filter-header-item filter-btn"><i class="fa fa-close" (click)="onClear()"></i></button>
+			<button class="filter-header-item filter-btn" (click)="this.open = !this.open"><i class="fa" [ngClass]="{'fa-angle-up': !open, 'fa-angle-down': open}"></i></button>
+			<button class="filter-header-item filter-btn" (click)="onClear()"><i class="fa fa-close"></i></button>
 		</span>
 	</div>
-	<div [hidden]="!open">
+	<div class="filters-sub" [hidden]="!open">
 		<app-type-filter></app-type-filter>
 		<app-name-filter></app-name-filter>
 		<app-description-filter></app-description-filter>
