--- a/src/app/filters/filters.component.scss
+++ b/src/app/filters/filters.component.scss
@@ -35,6 +35,14 @@
 	background-color: $primary-color-2;
 }
 
+.filter-select {
+	background-color: $primary-color-2;
+	
+	&[disabled] {
+		background-color: $primary-color-1;
+	}
+}
+
 .filter-btns {
 	position: absolute;
 	right: 5px;
@@ -44,11 +52,14 @@
 	margin-left: 3px;
 }
 
+.filters-sub {
+	border-top: 1px solid $border-color;
+}
+
 .filter {
 	height: 30px;
 	padding: 5px;
 	position: relative;
-	border-top: 1px solid $border-color;
 	
 	&-desc {
 		font-size: 16px;
@@ -63,6 +74,10 @@
 	}
 	
 	& .filter-toggle {
+		font-size: 12px;
+	}
+	
+	& .filter-text {
 		font-size: 12px;
 	}
 	
