Fix year css so days with events are the same size as days without

--- a/src/app/calendar/calendar-table/calendar-table.component.scss
+++ b/src/app/calendar/calendar-table/calendar-table.component.scss
@@ -112,11 +112,11 @@
 		height: 55px !important;
 	}
 	
-	&__icons {
-		text-align: center;
-	}
-	
 	&__icon {
+		position: absolute;
+		bottom: 10px;
+		left: 50%;
+		transform: translate(-50%);
 		height: .4em !important;
 		width: .4em !important;
 	}
