--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -1,11 +1,11 @@
 <div class="filters type__title">
 	<div class="filter-summary">
-		<span class="filter-summary-desc">Showing {{ calendarService.getEventsCount() }} events</span>
+		<span class="filter-summary-desc">Showing {{ filteredEventCount }} events</span>
 		<span class="filter-btns">
 			<span class="filter-header-item filter-toggle">
 				<app-toggle-switch [on]="enabled" (changed)="onEnable($event)"></app-toggle-switch>
 			</span>
-			<button class="filter-header-item filter-btn" (click)="this.open = !this.open"><i class="fa" [ngClass]="{'fa-angle-up': !open, 'fa-angle-down': open}"></i></button>
+			<button class="filter-header-item filter-btn" (click)="open = !open"><i class="fa" [ngClass]="{'fa-angle-up': !open, 'fa-angle-down': open}"></i></button>
 			<button class="filter-header-item filter-btn" (click)="onClear()"><i class="fa fa-close"></i></button>
 		</span>
 	</div>
