--- a/src/app/inputs/toggle-switch/toggle-switch.component.html
+++ b/src/app/inputs/toggle-switch/toggle-switch.component.html
@@ -1,4 +1,4 @@
 <label class="toggle-switch" [attr.data-disabled]="!enabled">
-	<input type="checkbox" class="toggle-switch__input" [name]="name" [id]="name" [(ngModel)]="on" (change)="onChange()" [disabled]="!enabled">
+	<input type="checkbox" class="toggle-switch__input" [name]="name" [id]="name" [(ngModel)]="on" (change)="onChanged()" [disabled]="!enabled">
 	<div class="toggle-switch__slider"></div>
 </label>
