--- a/src/app/filters/type-filter/type-filter.component.html
+++ b/src/app/filters/type-filter/type-filter.component.html
@@ -5,7 +5,7 @@
 	</select>
 	<span class="filter-btns">
 		<span class="filter-toggle">
-			<app-toggle-switch [on]="enabled" (changed)="onEnable($event)" [enabled]="filtersEnabled"></app-toggle-switch>
+			<app-toggle-switch [(on)]="enabled" (onChange)="onEnable()" [enabled]="filtersEnabled"></app-toggle-switch>
 		</span>
 		<button class="filter-btn" [disabled]="!filtersEnabled" (click)="onClear()"><i class="fa fa-close"></i></button>
 	</span>
