--- a/src/app/filters/filters.component.scss
+++ b/src/app/filters/filters.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/_constants.scss';
+@import '../../styles/base/_mixins.scss';
 
 .filters {
 	background-color: $primary-color-1;
@@ -7,10 +8,15 @@
 }
 
 .filter-summary {
-	text-align: center;
 	height: 50px;
 	padding-top: 7px;
 	position: relative;
+	padding-left: 5px;
+	
+	@include atSmall {
+		text-align: center;
+		padding-left: 0;
+	}
 	
 	&-desc {
 		font-size: 24px;
